RESOLVED FIXED135183
REGRESSION (r171016): Reproducible infinite spin selecting phone number
https://bugs.webkit.org/show_bug.cgi?id=135183
Summary REGRESSION (r171016): Reproducible infinite spin selecting phone number
Tim Horton
Reported 2014-07-22 17:28:06 PDT
Steps to Reproduce: 1. http://www.apple.com/pr/library/2014/07/17Sue-Wagner-Joins-Apple-s-Board-of-Directors.html 2. Select inside the phone number at the bottom with telephone number selection overlays on. Expected: Happy overlay. Actual: Spin forever in sadness. <rdar://problem/17727342>
Attachments
patch (3.22 KB, patch)
2014-07-22 17:31 PDT, Tim Horton
rniwa: review+
Tim Horton
Comment 1 2014-07-22 17:31:30 PDT
Tim Horton
Comment 2 2014-07-22 17:37:14 PDT
Note You need to log in before you can comment on or make changes to this bug.